--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <img src="img/Logo.png" alt="" class="w-40 md:w-[160px]">
             <div>
                 <label class="input input-bordered flex items-center gap-2">
-                    <input type="text" class="grow" placeholder="Search" />
+                    <input type="text" class="grow" placeholder="Search" id="inputValue" />
+                    <!-- <button class="btn" id="btnSrc" >search</button> -->
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       viewBox="0 0 16 16"
